force-app/main/default/objects/cgcloud__BO_API_Output_Entity__c/cgcloud__BO_API_Output_Entity__c.object-meta.xml
<CustomObject>
    <description>This table holds the output entities of the Business Object API.</description>
    <label>Business Object API Output Entity</label>
    <nameField>
        <displayFormat>OE-{000}</displayFormat>
        <label>Business Object API Output Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Object API Output Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>