force-app/main/default/objects/cgcloud__BO_API_Output_Entity__c/fields/cgcloud__BO_API_Entity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BO_API_Entity__c</fullName>
    <description>Reference to the Business Object API Entity.</description>
    <label>Business Object API Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Business Object API Entity Location must be Output</errorMessage>
        <filterItems>
            <field>cgcloud__BO_API_Entity__c.cgcloud__Location__c</field>
            <operation>equals</operation>
            <value>Output</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__BO_API_Entity__c</referenceTo>
    <relationshipLabel>Output Entities</relationshipLabel>
    <relationshipName>BO_API_Output_Entities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>